samples: radio_test: Indicate link status in cont. Rx
When running a continuous RX test (without number of packets
specified), indicate with LED0 lit when the packets are being
received with correct CRC. Turn off the LED when PER > 10% or
no correct packet is received in default timeout (100ms).

Ref. NCSDK-36346

temporary solution for radio_test to indicate the link status
in the continuous RX mode.

Signed-off-by: Michał Grochala <michal.grochala@nordicsemi.no>

--- a/samples/peripheral/radio_test/prj.conf
+++ b/samples/peripheral/radio_test/prj.conf
@@ -19,3 +19,6 @@ CONFIG_NRF_SECURITY=y
 CONFIG_FEM_AL_LIB=y
 CONFIG_PICOLIBC_IO_FLOAT=y
 CONFIG_SHELL_BACKEND_SERIAL_RX_RING_BUFFER_SIZE=1024
+
+# Added for showing link status
+CONFIG_DK_LIBRARY=y
